<resources>
    <string name="app_name">app_coursework</string>
    <string name="text">test</string>
    <string name="menu_item_1">1</string>
    <string name="first_item">first item</string>
    <string name="second_item">second item</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="create_new_location">Create new location</string>
    <string name="create_location_name_hint">Location name</string>
    <string name="create_location_coordinates_hint">Coordinates: eg. 51.4816,3.1791</string>
    <string name="save">Save</string>
    <string name="add_to_main_menu">Add to main menu?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="location_name">Location name</string>
    <string name="coordinates">Coordinates</string>
    <string name="name">Name</string>
    <string name="extra_information">More Information</string>
</resources>