<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateLocationFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/create_location_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_location_name_hint"
        android:inputType="textCapWords"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText
        android:id="@+id/create_location_text_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_location_text"
        android:hint="@string/create_location_coordinates_hint"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/add_to_menu_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_location_text_coordinates"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/add_to_main_menu" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_to_menu_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textOff="@string/no"
        android:textOn="@string/yes"  />

    <Button
        android:id="@+id/button_save_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/save" />



</RelativeLayout>